--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-log",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "print pretty log to console",
   "main": "index.js",
   "scripts": {
     "test": "node test/test.js"
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/song940/express-log/issues"
   },
-  "homepage": "https://github.com/song940/express-log"
+  "homepage": "https://github.com/song940/express-log",
+  "dependencies": {
+    "colors": "^1.0.3"
+  }
 }
